update blog post

--- a/src/components/sections/BlogPost.astro
+++ b/src/components/sections/BlogPost.astro
@@ -10,7 +10,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 
 <Section>
   <h2 class="section-title flex items-center gap-1">
-    <News2 /> Blog & Notas
+    <News2 /> Blog | Social Media Posts
   </h2>
 
   <article class="suscribe-container">
