--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -100,7 +100,7 @@ const SKILL_ICONS: Record<string, any> = {
     /* border: 1px solid rgb(30, 37, 44, 0.025); */
     /* background-color: rgb(30, 37, 44, 0.025); */
     border-radius: 0.5rem;
-    padding: 8px;
+    padding: 0px 8px;
   }
   .items {
     overflow: hidden;
