--- a/src/components/sections/BlogPost.astro
+++ b/src/components/sections/BlogPost.astro
@@ -1,16 +1,34 @@
 ---
 import Section from "../Section.astro";
-import { Rss } from "simple-icons-astro";
 import News2 from "@/icons/News2.astro";
 import News from "@/icons/News.astro";
 import RightArrow from "@/icons/RightArrow.astro";
+import Filetextfill from "@/icons/Filetextfill.astro";
+
+import {
+  Rss,
+  X,
+  Linkedin,
+  Threads,
+  Facebook,
+  Instagram,
+} from "simple-icons-astro";
+
+import { posts } from "@social";
+const SOCIAL_ICONS: Record<string, any> = {
+  Facebook,
+  Instagram,
+  Linkedin,
+  Threads,
+  X,
+};
 
 const allPosts = await Astro.glob("@/pages/posts/*.md");
 ---
 
 <Section>
   <h2 class="section-title flex items-center gap-1">
-    <News2 /> Blog | Social Media Posts
+    <News2 />Blog | Publicaciones
   </h2>
 
   <article class="suscribe-container">
@@ -27,22 +45,45 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
     </div>
   </article>
 
-  <ul>
+  <ul class="mb-2">
     {
       allPosts.map((post) => (
-        <li>
+        <li class="items">
           <a href={post.url}>
-            <News />
-            <h3>{post.frontmatter.title}</h3>
+            <News class="h-4 w-4" />
+            <h3 class="truncate">{post.frontmatter.title}</h3>
           </a>
-          <p>{post.frontmatter.description}</p>
-          <button>
-            <a href={post.url}>
-              Leer más <RightArrow />
-            </a>
-          </button>
+          <p class="line-clamp-2">{post.frontmatter.description}</p>
         </li>
       ))
+    }
+  </ul>
+
+  <ul>
+    {
+      posts.map(({ network, title, description, url }) => {
+        const Icon = SOCIAL_ICONS[network];
+
+        return (
+          <li>
+            <article>
+              <header>
+                <Icon class="w-4 h-4" />
+                <h3 class="truncate">
+                  <a
+                    href={url}
+                    title={`Ver el proyecto ${title}`}
+                    target="_blank"
+                  >
+                    {title}
+                  </a>
+                </h3>
+              </header>
+              <p class="line-clamp-2">{description}</p>
+            </article>
+          </li>
+        );
+      })
     }
   </ul>
 </Section>
@@ -50,45 +91,62 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 <style>
   ul {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 0.5rem;
   }
-  li {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 16px;
-    padding: 1rem;
+  li article,
+  .items {
+    padding: 0.5rem;
     border-radius: 0.5rem;
-    background-color: rgb(30, 37, 44, 0.02);
+    border: 1px solid rgb(30, 37, 44, 0.08);
+
+    transition: all 0.2s ease-in-out;
+    /* background-color: rgb(30, 37, 44, 0.03); */
   }
-  li a {
+  li article:hover,
+  .items:hover {
+    background-color: rgb(30, 37, 44, 0.08);
+  }
+  li article header {
     display: flex;
     align-items: center;
     gap: 0.25rem;
-    padding: 1px;
-    text-underline-offset: 4px;
-    color: rgb(30, 37, 44, 1);
-    font-size: 16px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
   }
-  li a:hover {
-    text-decoration: underline;
-  }
-  li p {
+  li article header a {
     font-size: 14px;
+    font-weight: 500;
+    color: rgb(30, 37, 44, 0.9);
+    inset: 0;
+    width: auto;
+  }
+  li article header a:hover {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+  }
+  li article p {
+    font-size: 12px;
     line-height: 1.4;
     color: rgb(30, 37, 44, 0.65);
     text-wrap: pretty;
-    
   }
-  li button a {
+  .items a {
     display: flex;
     align-items: center;
     gap: 0.25rem;
+  }
+  .items a h3 {
+    font-size: 14px;
+    font-weight: 500;
+    color: rgb(30, 37, 44, 0.85);
+  }
+  .items a h3:hover {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+  }
+  .items p {
     font-size: 12px;
+    color: rgb(30, 37, 44, 0.65);
+    text-wrap: pretty;
   }
 
   @media (width <= 700px) {
