update social media

--- a/src/components/sections/BlogPost.astro
+++ b/src/components/sections/BlogPost.astro
@@ -28,7 +28,7 @@ const allPosts = await Astro.glob("@/pages/posts/*.md");
 
 <Section>
   <h2 class="section-title flex items-center gap-1">
-    <News2 />Blog | Publicaciones
+    <News2 />Blog | Social Media
   </h2>
 
   <article class="suscribe-container">
