--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -18,7 +18,7 @@ const SOCIAL_ICONS: Record<string, any> = {
   <h2 class="section-title flex items-center gap-1">
     <Radar />Sígueme
   </h2>
-  
+
   <footer>
     <div class="avatar">
       <img src="../images/avatar.svg" alt=`${name}` class="avatar-img" />
@@ -61,7 +61,7 @@ const SOCIAL_ICONS: Record<string, any> = {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
   }
 
   .avatar {
@@ -71,15 +71,16 @@ const SOCIAL_ICONS: Record<string, any> = {
   }
 
   .avatar h3 {
-    font-size: 18px;
-    font-weight: 300;
+    font-size: 16px;
+    font-weight: 400;
     letter-spacing: -0.05em;
   }
 
   .copyright {
-    font-size: 1rem;
+    font-size: 14px;
     font-weight: 300;
     letter-spacing: 0.1em;
+    color: rgb(30, 37, 44, 0.65);
   }
 
   .social-icons {
@@ -91,10 +92,11 @@ const SOCIAL_ICONS: Record<string, any> = {
     transition-property: transform, color;
     transition-duration: 0.3s, 0.5s;
     transition-delay: 0s, 0.1s;
+    color: rgb(30, 37, 44, 0.65);
   }
   .social-icons a:hover {
     transform: scale(1.2) rotate(360deg);
-    color: var(--clr-yellow);
+    color: rgb(30, 37, 44, 1);
   }
 
   @media (width <= 700px) {
@@ -102,11 +104,7 @@ const SOCIAL_ICONS: Record<string, any> = {
       margin-bottom: 38px;
       padding: 0rem;
     }
-
-    footer {
-      gap: 0.5rem;
-    }
-
+    
     .avatar {
       flex-direction: column;
       text-align: center;
