--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/montserrat";
 import "@fontsource/lato";
+import "@fontsource-variable/inter";
 
 import { ViewTransitions } from "astro:transitions";
 
@@ -20,9 +21,13 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <ViewTransitions />
   </head>
-  <body>    
+  <body>
     <slot />
     <style is:global>
       :root {
