update pages and sections

--- a/src/components/resume/Skills.astro
+++ b/src/components/resume/Skills.astro
@@ -94,7 +94,7 @@ const SKILLS_ICONS: Record<string, any> = {
     align-items: center;
     border-radius: 0px;
     background: #eee;
-    color: rgb(22, 20, 20, 1);
+    color: rgb(30, 37, 44, 1);
     font-size: 12px;
     font-weight: 500;
     padding: 4px;
@@ -104,7 +104,8 @@ const SKILLS_ICONS: Record<string, any> = {
   }
 
   li:hover {
-    background-color: var(--clr-yellow);
+    background-color: rgb(30, 37, 44, 1);
+    color: #eee;
   }
   
 </style>
