--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -9,7 +9,7 @@ const { summary } = basics;
 
 <Section>
   <h2 class="section-title flex items-center gap-1"><User />Sobre mí</h2>
-  <p>{summary}</p>
+  <p class="text-pretty font-light">{summary}</p>
 
   <!-- <button
     class="resume flex items-center gap-1 mt-6 uppercase text-sm font-light"
