--- a/src/components/resume/Skills.astro
+++ b/src/components/resume/Skills.astro
@@ -93,7 +93,7 @@ const SKILLS_ICONS: Record<string, any> = {
     display: flex;
     align-items: center;
     border-radius: 0px;
-    background: #eee;
+    background-color: rgb(30, 37, 44, 0.06);
     color: rgb(30, 37, 44, 1);
     font-size: 12px;
     font-weight: 500;
@@ -105,7 +105,6 @@ const SKILLS_ICONS: Record<string, any> = {
 
   li:hover {
     background-color: rgb(30, 37, 44, 1);
-    color: #eee;
+    color: var(--clr-light);
   }
-  
 </style>
