--- a/src/components/resume/Skills.astro
+++ b/src/components/resume/Skills.astro
@@ -24,7 +24,8 @@ import {
   Meta,
   Googleanalytics,
   Typescript,
-  Mysql,
+  Mysql, 
+  Blogger,
 } from "simple-icons-astro";
 import Astrojs from "@/icons/AstroIcon.astro";
 import Next from "@/icons/Next.astro";
@@ -56,6 +57,7 @@ const SKILLS_ICONS: Record<string, any> = {
   Googleanalytics,
   Typescript,
   Mysql,
+  Blogger,
 };
 ---
 
