--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -26,6 +26,7 @@ import {
   Typescript,
   Vite,
   Rss,
+  Blogger,
 } from "simple-icons-astro";
 import Astrojs from "@/icons/AstroIcon.astro";
 import Next from "@/icons/Next.astro";
@@ -59,6 +60,7 @@ const SKILLS_ICONS: Record<string, any> = {
   Typescript,
   Vite,
   Rss,
+  Blogger,
 };
 ---
 
