--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -18,14 +18,14 @@ import Circle from "@/icons/circle.astro";
 import AstroIcon from "@/icons/AstroIcon.astro";
 import Data from "@/icons/Data.astro";
 
-const SKILL_ICONS: Record<string, any> = {
-  Html5,
-  Css3,
-  React,
-  Javascript,
-  AstroIcon,
-  Vite,
-};
+// const SKILL_ICONS: Record<string, any> = {
+//   Html5,
+//   Css3,
+//   React,
+//   Javascript,
+//   AstroIcon,
+//   Vite,
+// };
 
 import { basics } from "@landing";
 import { projects } from "@cv";
