--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
   }
 
   h2 {
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
     font-weight: 700;
     font-style: normal;
     line-height: 1.5;
