--- a/src/components/sections/BlogPost.astro
+++ b/src/components/sections/BlogPost.astro
@@ -20,7 +20,8 @@ const SOCIAL_ICONS: Record<string, any> = {
   Instagram,
   Linkedin,
   Threads,
-  X, News
+  X, 
+  News,
 };
 
 const allPosts = await Astro.glob("@/pages/posts/*.md");
