--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -2,12 +2,6 @@
 import Section from "../Section.astro";
 import Logo from "@/icons/Logo.astro";
 import Home from "@/icons/Home.astro";
-import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
-import Download from "@/icons/Download.astro";
-import Menu from "@/icons/Menu.astro";
-import Close from "@/icons/CloseX.astro";
-import Briefcase from "@/icons/BriefCaseAlt.astro";
-import News from "@/icons/News.astro";
 ---
 
 <Section>
@@ -19,7 +13,9 @@ import News from "@/icons/News.astro";
         class="flex title-font font-medium items-center text-gray-900 "
       >
         <Logo />
-        <h3 class="ml-2 text-xl font-bold tracking-tighter">Edinson.</h3>
+        <h3 class="ml-2 text-xl font-bold tracking-tighter">
+          Edinson.
+        </h3>
       </a>      
 
       <a
@@ -30,126 +26,9 @@ import News from "@/icons/News.astro";
         <Home class="w-4 h-4" />
       </a>
     </div>
-  </header>
-
-  <!-- <header
-    class="main-header flex items-center justify-between px-0 py-4"
-    transition:animate="slide"
-  >
-    <a href="/" class="logoText flex items-center">
-      <Logo />
-      <span class="ml-1 text-2xl font-black">edinson.dev</span>
-    </a>
-    <nav
-      class="nav-menu flex flex-wrap items-center gap-5 text-sm font-light uppercase justify-center"
-    >
-      <button class="open-menu" id="open-menu">
-        <Menu />
-      </button>
-      <ul class="nav-list" id="nav-list">
-        <button class="close-menu" id="close-menu">
-          <Close />
-        </button>
-        <a href="/" class="nav-link ">Volver<ArrowReturnLeft /></a>
-      </ul>
-    </nav>
-  </header> -->
+  </header>  
 </Section>
 
-<style>
-  .main-header {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    border-bottom: 1px solid rgb(30, 37, 44, 0.1);
-  }
-  .main-header::before {
-    content: "";
-    position: absolute;
-    background-color: rgb(255, 253, 248, 0.98);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    inset: 0;
-    z-index: -1;
-  }
-  .logoText {
-    font-family: var(--titles);
-  }
-  .close-menu,
-  .open-menu {
-    display: none;
-  }
-  .nav-list {
-    display: flex;
-    gap: 1rem;
-  }
-  .nav-link {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    position: relative;
-    transition: 0.2s;
-  }
-  .nav-link::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100%;
-    height: 2px;
-
-    background-color: var(--clr-yellow);
-    transform: scaleX(0);
-    transition: 0.2s;
-    transform-origin: left;
-  }
-  .nav-link:hover {
-    color: var(--clr-yellow);
-  }
-  .nav-link:hover::after {
-    transform: scaleX(1);
-  }
-
-  @media (width <= 700px) {
-    .nav-list {
-      position: fixed;
-      inset: 0;
-      flex-direction: column;
-      text-align: right;
-      align-items: end;
-      padding: 4rem 2rem;
-      width: 100%;
-      height: 100dvh;
-      z-index: 1;
-      gap: 2.5rem;
-      background-color: rgb(255, 253, 248, 0.98);
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-
-      visibility: hidden;
-      opacity: 0;
-    }
-    .nav-list.active {
-      visibility: visible;
-      opacity: 1;
-    }
-    .nav-link {
-      font-size: 1.5rem;
-      padding: 8px 4px;
-    }
-    .close-menu {
-      display: block;
-      position: absolute;
-      font-size: 2rem;
-      cursor: pointer;
-      left: 1.5rem;
-      top: 1.5rem;
-      color: var(--clr-dark);
-    }
-    .open-menu {
-      display: block;
-      font-size: 2rem;
-      color: var(--clr-dark);
-    }
-  }
+<style>  
+  
 </style>
