--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,8 +36,6 @@ const { title } = Astro.props;
         --clr-yellow: rgb(255, 193, 52);
         --clr-red-50: rgb(236, 69, 104, 1);
         --clr-red-100: rgb(228, 8, 72, 1);
-        --texts: "Lato", sans-serif;
-        --titles: "Montserrat Variable", sans-serif;
 
         --primary-100: 255, 193, 7;
         --primary-200: 221, 164, 0;
@@ -52,6 +50,7 @@ const { title } = Astro.props;
         --bg-300: 75, 99, 150;
         --light: 255, 253, 248;
         --dark: 30, 37, 44;
+        --secondary-100: 255, 193, 52;
         --heading-font: "Montserrat Variable", sans-serif;
         --body-font: "Lato", sans-serif;
       }
@@ -119,21 +118,20 @@ const { title } = Astro.props;
         letter-spacing: -0.03em;
         font-size: 1.25rem;
         text-transform: none;
-        color: rgb(var(--dark), .9);
+        color: rgb(var(--dark), 0.9);
         width: fit-content;
-        padding: .0625rem 2.5rem .0625rem 1rem;        
+        padding: 0.0625rem 2.5rem 0.0625rem 1rem;
         border-radius: 6px;
-        border: 2px solid rgb(var(--dark), .95);
-        box-shadow: 0.1em 0.1em rgb(var(--dark), .95);
+        border: 2px solid rgb(var(--dark), 0.95);
+        box-shadow: 0.1em 0.1em rgb(var(--dark), 0.95);
       }
       .suscribe-container {
-        border: 1px solid rgb(var(--dark), 0.08);
-        background: rgb(var(--light));
-        padding: .5rem;
+        border: 1px solid rgb(var(--dark), 0.08);        
+        padding: 0.5rem;
         margin-bottom: 2rem;
       }
       .suscribe-container p {
-        font-size: .75rem;
+        font-size: 0.75rem;
         font-weight: 300;
         text-wrap: pretty;
         color: rgb(var(--dark), 0.75);
@@ -142,13 +140,13 @@ const { title } = Astro.props;
       .box-left {
         display: flex;
         justify-content: flex-end;
-        font-size: .625rem;
+        font-size: 0.625rem;
         color: rgb(var(--dark), 0.45);
       }
       .box-left .rss-btn {
         display: flex;
         align-items: center;
-        padding: .25rem;
+        padding: 0.25rem;
         background-color: rgb(var(--dark), 0.08);
       }
       .print {
