--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,52 +2,50 @@
 import Layout from "@/layouts/Layout.astro";
 import Section from "@/components/Section.astro";
 import Logo from "@/icons/Logo.astro";
-import Menu from "@/icons/Menu.astro";
-import Close from "@/icons/CloseX.astro";
-import ArrowReturnLeft from "@/icons/ArrowReturnLeft.astro";
+import News from "@/icons/News.astro";
 import { slide } from "astro:transitions";
 const { frontmatter } = Astro.props;
 ---
 
 <Layout title={frontmatter.title}>
-  <div
-    class="absolute inset-0 -z-10 max-h-full max-w-full bg-[#FFFDF8] bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"
-  >
-  </div>
   <Section>
     <header
-      class="main-header flex items-center justify-between px-0 py-4"
-      transition:animate={slide({ duration: ".5s" })}
+      class="text-[rgb(var(--dark), 0.08)] body-font"
+      transition:animate="slide"
     >
-      <a href="/" class="logoText flex items-center">
-        <Logo />
-        <span class="ml-1 text-2xl font-black">edinson.dev</span>
-      </a>
-      <nav
-        class="nav-menu flex flex-wrap items-center gap-5 text-sm font-light uppercase justify-center"
+      <div
+        class="container mx-auto flex flex-row items-center justify-between pt-4"
       >
-        <button class="open-menu" id="open-menu">
-          <Menu />
-        </button>
-        <ul class="nav-list" id="nav-list">
-          <button class="close-menu" id="close-menu">
-            <Close />
-          </button>
-          <a href="/blog" class="nav-link"
-            >Volver a Blog<ArrowReturnLeft /></a
-          >
-        </ul>
-      </nav>
+        <a class="flex title-font font-medium items-center text-gray-900">
+          <Logo />
+          <h3 class="ml-2 text-xl font-bold tracking-tighter">Edinson.</h3>
+        </a>
+
+        <a
+          class="inline-flex items-center gap-1 bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-sm md:mt-0"
+          href="/blog"
+        >
+          Volver a Blog
+          <News class="w-4 h-4" />
+        </a>
+      </div>
     </header>
 
     <div class="mt-[72px]">
-      <h2 class="text-2xl font-bold">{frontmatter.title}</h2>
-      <p class="italic text-gray-400">{frontmatter.pubDate.slice(0, 10)}</p>
-      <p class="text-balance">{frontmatter.description}</p>
-      <p>
-        Escrito por: <span class="font-semibold text-gray-500 tracking-wide"
-          >{frontmatter.author}</span
-        >
+      <h2 class="text-2xl font-bold">
+        {frontmatter.title}
+      </h2>
+      <p class="italic text-gray-400">
+        {frontmatter.pubDate.slice(0, 10)}
+      </p>
+      <p class="text-balance">
+        {frontmatter.description}
+      </p>
+      <p> 
+        Escrito por: 
+        <span class="font-semibold text-gray-500 tracking-wide">
+          {frontmatter.author}
+        </span>
       </p>
       <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
     </div>
@@ -56,120 +54,22 @@ const { frontmatter } = Astro.props;
       <slot />
     </div>
   </Section>
+
+  <style>
+    img {
+      border: 1px solid rgb(var(--dark), 0.08);
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+      width: 700px;
+      height: 350px;
+      border-radius: 12px;
+      margin: 16px 0;
+    }
+
+    @media (width <= 700px) {
+      header {
+        margin-bottom: 38px;
+      }
+    }
+  </style>
 </Layout>
-
-<style>
-  .main-header {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    border-bottom: 1px solid rgb(30, 37, 44, 0.1);
-  }
-  .main-header::before {
-    background-color: rgb(255, 253, 248, 0.98);
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
-    content: "";
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-  }
-  p {
-    font-size: 14px;
-    line-height: 1.5;
-    text-wrap: balance;
-    padding-left: 16px;
-  }
-  img {
-    border: 1px solid rgb(30, 37, 44, 0.08);
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
-    width: 700px;
-    height: 350px;
-    border-radius: 12px;
-    margin: 16px 0;
-  }
-  .logoText {
-    font-family: var(--titles);
-  }
-  .close-menu,
-  .open-menu {
-    display: none;
-  }
-  .nav-list {
-    display: flex;
-    gap: 1rem;
-  }
-  .nav-link {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    position: relative;
-    transition: 0.2s;
-  }
-  .nav-link::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100%;
-    height: 2px;
-
-    background-color: var(--clr-yellow);
-    transform: scaleX(0);
-    transition: 0.2s;
-    transform-origin: left;
-  }
-  .nav-link:hover {
-    color: var(--clr-yellow);
-  }
-  .nav-link:hover::after {
-    transform: scaleX(1);
-  }
-
-  @media (width <= 700px) {
-    header {
-      margin-bottom: 38px;
-    }
-    .nav-list {
-      position: fixed;
-      inset: 0;
-      flex-direction: column;
-      text-align: right;
-      align-items: end;
-      padding: 4rem 2rem;
-      width: 100%;
-      height: 100dvh;
-      z-index: 1;
-      gap: 2.5rem;
-      background-color: rgb(255, 253, 248, 0.9);
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-
-      visibility: hidden;
-      opacity: 0;
-    }
-    .nav-list.active {
-      visibility: visible;
-      opacity: 1;
-    }
-    .nav-link {
-      font-size: 1.5rem;
-      padding: 8px 4px;
-    }
-    .close-menu {
-      display: block;
-      position: absolute;
-      font-size: 2rem;
-      cursor: pointer;
-      left: 1.5rem;
-      top: 1.5rem;
-      color: var(--clr-dark);
-    }
-    .open-menu {
-      display: block;
-      font-size: 2rem;
-      color: var(--clr-dark);
-    }
-  }
-</style>
