--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Navbar from "@/components/sections/Navbar.astro";
 import Hero from "@/components/sections/Hero.astro";
 import About from "@/components/sections/About.astro";
 import Skills from "@/components/sections/Skills.astro";
+import SkillSlider from "@/components/sections/SkillSlider.astro";
 import BlogPost from "@/components/sections/BlogPost.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Footer from "@/components/sections/Footer.astro";
@@ -14,9 +15,9 @@ const { name, label } = basics;
 
 <Layout title={`Portafolio de ${name} - ${label}`}>  
   <Navbar />
-  <Hero />
+  <Hero />  
   <About />
-  <Skills />
+  <SkillSlider />  
   <Projects />
   <BlogPost />
   <Footer />
