--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "@/styles/global.css";
 import "@fontsource-variable/montserrat";
 import "@fontsource/lato";
 import NoiseBackground from "@/components/NoiseBackground.astro";
@@ -34,148 +35,7 @@ const { title } = Astro.props;
       <slot />
     </div>
     <style is:global>
-      :root {
-        --clr-light: rgb(255, 253, 248, 1);
-        --clr-dark: rgb(30, 37, 44, 1);
-        --clr-blue-50: rgb(177, 218, 233, 1);
-        --clr-blue-100: rgb(104, 213, 217, 1);
-        --clr-yellow: rgb(255, 193, 52);
-        --clr-red-50: rgb(236, 69, 104, 1);
-        --clr-red-100: rgb(228, 8, 72, 1);
-
-        --primary-100: 255, 193, 7;
-        --primary-200: 221, 164, 0;
-        --primary-300: 145, 100, 0;
-        --accent-100: 76, 175, 80;
-        --accent-200: 0, 81, 0;
-        --text-100: 255, 254, 254;
-        --text-200: 224, 224, 224;
-        --bg-50: 0, 78, 146;
-        --bg-100: 25, 57, 104;
-        --bg-200: 46, 73, 122;
-        --bg-300: 75, 99, 150;
-        --light: 255, 253, 248;
-        --dark: 30, 37, 44;
-        --secondary-100: 255, 193, 52;
-        --heading-font: "Montserrat Variable", sans-serif;
-        --body-font: "Lato", sans-serif;
-      }
-      *::selection {
-        background-color: rgb(var(--dark));
-        color: rgb(var(--light));
-      }
-      html {
-        font-family: system-ui, sans-serif;
-        letter-spacing: -0.0063rem;
-      }
-      body,
-      figure {
-        margin: 0;
-        padding: 0;
-      }
-      a {
-        text-decoration: none;
-      }
-      ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      *,
-      *::before,
-      *::after {
-        box-sizing: border-box;
-      }
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        font-family: var(--heading-font);
-        margin: 0;
-      }
-      body {
-        font-family: var(--body-font);
-        color: rgb(var(--dark));
-        
-      }
-      
-
-      p {
-        color: rgb(var(--dark));
-        font-size: 14px;
-        line-height: 1.5;
-        margin: 0;
-        text-wrap: pretty;
-      }
-      code {
-        font-family:
-          Menlo,
-          Monaco,
-          Lucida Console,
-          Liberation Mono,
-          DejaVu Sans Mono,
-          Bitstream Vera Sans Mono,
-          Courier New,
-          monospace;
-      }
-      .section-title {
-        margin-bottom: 2rem;
-        font-weight: 700;
-        line-height: 1.5;
-        letter-spacing: -0.03em;
-        font-size: 1.25rem;
-        text-transform: none;
-        color: rgb(var(--dark), 0.9);
-        width: fit-content;
-        padding: 0.0625rem 2.5rem 0.0625rem 1rem;
-        border-radius: 6px;
-        border: 2px solid rgb(var(--dark), 0.95);
-        box-shadow: 0.1em 0.1em rgb(var(--dark), 0.95);
-      }
-      .suscribe-container {
-        border: 1px solid rgb(var(--dark), 0.08);
-        padding: 0.5rem;
-        margin-bottom: 2rem;
-      }
-      .suscribe-container p {
-        font-size: 0.75rem;
-        font-weight: 300;
-        text-wrap: pretty;
-        color: rgb(var(--dark), 0.75);
-      }
-
-      .box-left {
-        display: flex;
-        justify-content: flex-end;
-        font-size: 0.625rem;
-        color: rgb(var(--dark), 0.45);
-      }
-      .box-left .rss-btn {
-        display: flex;
-        align-items: center;
-        padding: 0.25rem;
-        background-color: rgb(var(--dark), 0.08);
-      }
-      .print {
-        display: none !important;
-      }
-
-      @media print {
-        .no-print {
-          display: none !important;
-        }
-        .print {
-          display: block !important;
-        }
-        astro-dev-toolbar {
-          display: none !important;
-        }
-        article {
-          break-inside: avoid;
-        }
-      }
+    
     </style>
 
     <script>
