--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,13 @@
-
 :root {
   /* Colors */
+  --clr-light: rgb(255, 253, 248, 1);
+  --clr-dark: rgb(30, 37, 44, 1);
+  --clr-blue-50: rgb(177, 218, 233, 1);
+  --clr-blue-100: rgb(104, 213, 217, 1);
+  --clr-yellow: rgb(255, 193, 52);
+  --clr-red-50: rgb(236, 69, 104, 1);
+  --clr-red-100: rgb(228, 8, 72, 1);
+
   --primary-100: 255, 193, 7;
   --primary-200: 221, 164, 0;
   --primary-300: 145, 100, 0;
@@ -14,38 +21,44 @@
   --bg-300: 75, 99, 150;
   --light: 255, 253, 248;
   --dark: 30, 37, 44;
+  --secondary-100: 255, 193, 52;
+  --tertiary-100: 236, 69, 104;
+  --quaternary-100: 177, 218, 233;
   /* Fonts */
   --heading-font: "Montserrat Variable", sans-serif;
   --body-font: "Lato", sans-serif;
 }
 
-/* === Reset CSS === */
-* {
+*::selection {
+  background-color: rgb(var(--dark));
+  color: rgb(var(--light));
+}
+
+html {
+  font-family: system-ui, sans-serif;
+  letter-spacing: -0.0063rem;
+}
+
+body,
+figure {
   margin: 0;
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+*,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-body {
-  min-height: 100dvh;
-  font-family: var(--body-font);
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-p {
-  text-wrap: pretty;
-  line-height: 1.5;
-  margin: 0;
 }
 
 h1,
@@ -54,30 +67,97 @@ h3,
 h4,
 h5,
 h6 {
-  text-wrap: balance;
   font-family: var(--heading-font);
   margin: 0;
 }
 
-img,
-video,
-svg {
-  height: auto;
-  max-width: 100%;
+body {
+  font-family: var(--body-font);
+  color: rgb(var(--dark));
+
 }
 
-@media(prefers-reduced-motion: reduce) {
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-    transition: none;
+
+p {
+  color: rgb(var(--dark));
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 0;
+  text-wrap: pretty;
+}
+
+code {
+  font-family:
+    Menlo,
+    Monaco,
+    Lucida Console,
+    Liberation Mono,
+    DejaVu Sans Mono,
+    Bitstream Vera Sans Mono,
+    Courier New,
+    monospace;
+}
+
+.section-title {
+  margin-bottom: 2rem;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: -0.03em;
+  font-size: 1.25rem;
+  text-transform: none;
+  color: rgb(var(--dark), 0.9);
+  width: fit-content;
+  padding: 0.0625rem 2.5rem 0.0625rem 1rem;
+  border-radius: 6px;
+  border: 2px solid rgb(var(--dark), 0.95);
+  box-shadow: 0.1em 0.1em rgb(var(--dark), 0.95);
+}
+
+.suscribe-container {
+  border: 1px solid rgb(var(--dark), 0.08);
+  padding: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.suscribe-container p {
+  font-size: 0.75rem;
+  font-weight: 300;
+  text-wrap: pretty;
+  color: rgb(var(--dark), 0.75);
+}
+
+.box-left {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.625rem;
+  color: rgb(var(--dark), 0.45);
+}
+
+.box-left .rss-btn {
+  display: flex;
+  align-items: center;
+  padding: 0.25rem;
+  background-color: rgb(var(--dark), 0.08);
+}
+
+.print {
+  display: none !important;
+}
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
+
+  .print {
+    display: block !important;
+  }
+
+  astro-dev-toolbar {
+    display: none !important;
+  }
+
+  article {
+    break-inside: avoid;
   }
 }
-/* === End Reset CSS === */
-
-/* === Global Base Styles === */
-
